# spec-spine

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh  rust-toolchain.toml  spec-spine.toml
.claude/agents/: architect.md  explorer.md  implementer.md  reviewer.md
.claude/skills/code-review/: SKILL.md
.claude/skills/init/: SKILL.md
.claude/skills/setup/: SKILL.md
.claude/skills/ship/: SKILL.md
.derived/codebase-index/: index.json
.derived/codebase-index/by-package/: spec-spine-cli.json  spec-spine-core.json  spec-spine-types.json  spec-spine.json
.derived/codebase-index/by-spec/: 000-spec-spine-bootstrap.json  001-compile-registry.json  002-registry-query.json  003-conformance-lint.json  004-codebase-index.json  005-coupling-gate.json  006-init-scaffold.json  007-distribution.json  008-python-distribution.json  009-coupling-floor-claim-precedence.json  010-registry-query-projection-flags.json  011-index-render-orphans.json  012-index-hash-slices.json  013-declared-extra-frontmatter-passthrough.json  014-edge-paths-grammar-sugar.json  015-establishes-wrapper-na-alias.json  016-short-id-resolution.json  017-directory-crate-module-units.json  018-constrains-discriminator-optional-unit.json  019-structured-partial-supersedes.json  020-derived-artifact-merge-driver.json  021-release-supply-chain-artifacts.json  022-keypath-section-anchors.json  023-ledger-seal.json  024-index-sharding.json  025-unresolved-unit-severity.json  026-resolution-discovery-fixes.json  027-symbol-resolution-feature-gate.json  028-references-provenance-derived-at.json  029-claude-code-skill-kit.json
.derived/spec-registry/: registry.json
.derived/spec-registry/by-spec/: 000-spec-spine-bootstrap.json  001-compile-registry.json  002-registry-query.json  003-conformance-lint.json  004-codebase-index.json  005-coupling-gate.json  006-init-scaffold.json  007-distribution.json  008-python-distribution.json  009-coupling-floor-claim-precedence.json  010-registry-query-projection-flags.json  011-index-render-orphans.json  012-index-hash-slices.json  013-declared-extra-frontmatter-passthrough.json  014-edge-paths-grammar-sugar.json  015-establishes-wrapper-na-alias.json  016-short-id-resolution.json  017-directory-crate-module-units.json  018-constrains-discriminator-optional-unit.json  019-structured-partial-supersedes.json  020-derived-artifact-merge-driver.json  021-release-supply-chain-artifacts.json  022-keypath-section-anchors.json  023-ledger-seal.json  024-index-sharding.json  025-unresolved-unit-severity.json  026-resolution-discovery-fixes.json  027-symbol-resolution-feature-gate.json  (+2 more)
.githooks/: enable-merge-driver.sh  merge-derived-index.sh
.github/workflows/: ai-pr-review.yml  ci.yml  determinism.yml  release.yml
crates/spec-spine-cli/: Cargo.toml  README.md
crates/spec-spine-cli/src/: cmd_attest.rs  cmd_compile.rs  cmd_couple.rs  cmd_index.rs  cmd_init.rs  cmd_lint.rs  cmd_registry.rs  main.rs  seal.rs  verify_attestation.rs
crates/spec-spine-cli/tests/: cli.rs  couple.rs  init.rs
crates/spec-spine-core/: Cargo.toml  README.md
crates/spec-spine-core/src/: attest.rs  compile.rs  couple.rs  dep_only.rs  index.rs  lib.rs  lint.rs  manifest.rs  pathutil.rs  query.rs  render.rs  scaffold.rs  sections.rs  shard.rs  symbols.rs
crates/spec-spine-core/tests/: attest.rs  compile.rs  conformance.rs  couple.rs  index.rs  render.rs  scaffold.rs
crates/spec-spine-types/: Cargo.toml  README.md
crates/spec-spine-types/schemas/: codebase-index-package-shard.schema.json  codebase-index-spec-shard.schema.json  codebase-index.schema.json  registry-spec-shard.schema.json  registry.schema.json
crates/spec-spine-types/src/: attest.rs  codebase.rs  config.rs  edges.rs  error.rs  frontmatter.rs  lib.rs  registry.rs  schema.rs  unit.rs  version.rs
crates/spec-spine-types/tests/: config.rs  dogfood.rs  dtos.rs  frontmatter.rs  grammar.rs
docs/: adoption-guide.md  api.md  bindings-plan.md  concept.md  overlay-contract.md  releasing.md  schema-versioning.md
docs/design/: 00-architecture.md  01-partial-supersession.md
kit/: AGENTS.md  README.md
npm/: README.md  package.json
npm/lib/: platform.js
npm/scripts/: generate-platform-packages.js  smoke-test.sh
npm/test/: platform.test.js
py/: README.md  pyproject.toml
py/scripts/: generate_wheels.py  smoke_test.sh
py/src/spec_spine/: __init__.py  _refuse.py  platform_map.py
py/test/: test_platform_map.py
scripts/: bump_version.py
specs/000-spec-spine-bootstrap/: spec.md
specs/001-compile-registry/: spec.md
specs/002-registry-query/: spec.md
specs/003-conformance-lint/: spec.md
specs/004-codebase-index/: spec.md
specs/005-coupling-gate/: spec.md
specs/006-init-scaffold/: spec.md
specs/007-distribution/: spec.md
specs/008-python-distribution/: spec.md
specs/009-coupling-floor-claim-precedence/: spec.md
specs/010-registry-query-projection-flags/: spec.md
specs/011-index-render-orphans/: spec.md
specs/012-index-hash-slices/: spec.md
specs/013-declared-extra-frontmatter-passthrough/: spec.md
specs/014-edge-paths-grammar-sugar/: spec.md
specs/015-establishes-wrapper-na-alias/: spec.md
specs/016-short-id-resolution/: spec.md
specs/017-directory-crate-module-units/: spec.md
specs/018-constrains-discriminator-optional-unit/: spec.md
specs/019-structured-partial-supersedes/: spec.md
specs/020-derived-artifact-merge-driver/: spec.md
specs/022-keypath-section-anchors/: spec.md
specs/023-ledger-seal/: spec.md
specs/024-index-sharding/: spec.md
specs/025-unresolved-unit-severity/: spec.md
specs/026-resolution-discovery-fixes/: spec.md
specs/027-symbol-resolution-feature-gate/: spec.md
specs/028-references-provenance-derived-at/: spec.md
specs/029-claude-code-skill-kit/: spec.md
standards/spec/: constitution.md  contract.md
website/: README.md  docusaurus.config.ts  sidebars.ts
website/docs/: adoption-guide.md  api-reference.md  configuration.md  extending-and-overlays.md  faq.md  releasing.md  schema-and-versioning.md
(+37 files in other folders)
