# spec-spine: workspace root.
# A typed, hash-verifiable authority ledger over a markdown spec corpus.
# Three published crates (types/core/cli); see docs/design/00-architecture.md.
[workspace]
resolver = "2"
members = [
    "crates/spec-spine-types",
    "crates/spec-spine-core",
    "crates/spec-spine-cli",
]

# Shared metadata inherited by member crates via `field.workspace = true`.
[workspace.package]
version = "0.6.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/bartekus/spec-spine"
homepage = "https://github.com/bartekus/spec-spine"
authors = ["The spec-spine Authors"]
keywords = ["spec", "governance", "authority", "determinism", "agents"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
toml_edit = "0.22"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
time = { version = "0.3", features = ["formatting"] }
# Detached Ed25519 seal over a corpus attestation (spec 023). CLI-only: the pure
# core and the type substrate stay crypto-free and key-free.
ed25519-dalek = "2"
# Internal crates (path + version so the published surface is not path-only).
spec-spine-types = { version = "0.6.0", path = "crates/spec-spine-types" }
spec-spine-core = { version = "0.6.0", path = "crates/spec-spine-core" }

# The library must not contain unsafe; the public boundary is FFI-friendly without it.
[workspace.lints.rust]
unsafe_code = "forbid"
