# Spec: specs/008-python-distribution/spec.md
#
# This pyproject builds ONLY the source distribution (sdist). The five platform
# wheels are assembled by scripts/generate_wheels.py from the release archives
# (no build backend, no second Rust build) -- the exact parallel of npm's
# generate-platform-packages.js. We publish: 5 platform wheels + this sdist.
# We never publish the pure `py3-none-any` wheel this backend would build; that
# wheel is built locally, only on a host where no platform wheel matched, where
# its `spec-spine` entry point is the clear refusal (_refuse.py).
# setuptools>=77 gives us the standard SPDX `license`/`license-files` fields
# (PEP 639); with it, a license *classifier* is rejected as redundant.
[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-spine"
# Single source of truth at publish time is the git tag; generate_wheels.py and
# the sdist build are both invoked with --version / SETUPTOOLS_SCM-free explicit
# version by release.yml, and the lock check fails on a tag/version mismatch
# (§3.5 parity). Tracks the workspace version; bumped in lockstep with
# Cargo.toml and npm/package.json by scripts/bump_version.py.
version = "0.2.0"
description = "The spec-spine CLI: compile a markdown spec corpus into a deterministic authority ledger and refuse code that drifts from its owning spec. Ships the prebuilt binary; no Rust toolchain required."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "The spec-spine Authors" }]
keywords = ["spec", "specification", "authority", "governance", "coupling", "cli", "rust", "deterministic"]
# Honest floor for the tiny Python that the sdist actually runs. The platform
# wheels declare a more permissive floor (set in generate_wheels.py) so a Python
# version mismatch never pushes a supported host onto this sdist.
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/bartekus/spec-spine"
Repository = "https://github.com/bartekus/spec-spine"
Issues = "https://github.com/bartekus/spec-spine/issues"

# Same command name on every host. On a supported host the platform wheel's
# bundled binary provides `spec-spine`; on an unsupported host this sdist
# provides `spec-spine` -> the refusal. Only one is ever installed per host, so
# the names never collide.
[project.scripts]
spec-spine = "spec_spine._refuse:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
