[package]
name = "spec-spine-cli"
description = "The `spec-spine` command-line tool: compile a markdown spec corpus into a deterministic authority registry and query it. A thin wrapper over spec-spine-core."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

# `cargo install spec-spine-cli` yields a binary named `spec-spine`.
[[bin]]
name = "spec-spine"
path = "src/main.rs"

# Dogfood: the CLI is born with the compile capability.
[package.metadata.spec-spine]
spec = "001-compile-registry"

[dependencies]
spec-spine-core = { workspace = true }
spec-spine-types = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
# Ed25519 detached seal over a corpus attestation (spec 023, FR-003): signing
# and signature verification live here so the core stays key-free.
ed25519-dalek = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
