[package]
name = "spec-spine-core"
description = "The spec-spine engine: compile a markdown spec corpus into a deterministic authority registry, and query it. The library FFI bindings will wrap."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

# Dogfood: the compile capability brings this crate into being.
[package.metadata.spec-spine]
spec = "001-compile-registry"

[dependencies]
spec-spine-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
# Symbol resolution. Pinned EXACT (=) — the resolver is a determinism input
# across the 5-triple release matrix (Phase-3 watch-item 2): an unpinned grammar
# would shift symbol line-spans and surface as flaky goldens. Cargo.lock is committed.
tree-sitter = "=0.25.10"
tree-sitter-rust = "=0.24.2"
tree-sitter-typescript = "=0.23.2"
toml = { workspace = true }
serde_yaml = { workspace = true }
glob = "0.3"

[dev-dependencies]
jsonschema = "0.26"
tempfile = "3"

[lints]
workspace = true
